# hellonius_freshus_oxidized

./: .env  Cargo.toml  Rocket.toml  mock.sql  sort.dart
migrations/: 20231118081028_recipes.down.sql  20231118081028_recipes.up.sql  20231118124846_allergies.down.sql  20231118124846_allergies.up.sql  20231118224823_image_url.down.sql  20231118224823_image_url.up.sql  20231119002323_optional_component.up.sql
src/: db.rs  main.rs
src/logic/: ingredient.rs  recipe.rs
src/model/: ingredient.rs  mod.rs  recipe.rs
src/persistence/: ingredient.rs  recipe.rs
src/recipes/: crud.rs  mod.rs
src/routes/: mod.rs  recipe.rs
