[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "tls-rustls", "macros", "migrate"]
